# opForge

./: .gitignore  Cargo.toml  Makefile  README.md
.tmp_yaml/: yaml.py
docs/: asm485-reference-manual.md  implementation-plan-family-cpu-registry.md  instruction-table-architecture.md  multi-cpu-architecture.md  opForge-reference-manual.md
examples/: 65816_allmodes.asm  65816_simple.asm  cond_syntax.asm  errors.asm  expr_syntax.asm  macro_segment_syntax.asm  macro_syntax.asm  module_metadata_block.asm  module_metadata_output.asm  module_metadata_outputs.asm  module_use.asm  module_use_autoload.asm  module_use_include.asm  module_use_lib.inc  module_use_private_error.asm  module_visibility.asm  preproc_syntax.asm  preproc_syntax.inc  section_module_use_autoload.asm  section_module_use_include.asm  section_module_use_lib.inc  section_simple.asm  statement_boundary_span.asm  statement_expansion.asm  statement_signature_error.asm  statement_signatures.asm  syntax.asm
examples/lib/: example_autoload_lib.asm  example_section_lib.asm
examples/project_root/: README.md  main.asm  util.asm
examples/reference/: 6502_allmodes.lst  6502_simple.lst  65816_allmodes.hex  65816_allmodes.lst  65816_simple.hex  65816_simple.lst  65c02_allmodes.lst  65c02_simple.lst  README.md  cond_syntax.hex  cond_syntax.lst  errors.hex  errors.lst  expr_syntax.hex  expr_syntax.lst  grouping.lst  led1.lst  scopes.lst  (+35 more)
src/: assembler.rs  imagestore.rs  instructions.rs  lib.rs  macro_processor.rs  main.rs  parser.rs  parser_reporter.rs  preprocess.rs  symbol_table.rs  token_value.rs  tokenizer.rs
(+76 files in other folders)
